force-app/main/default/objects/Employee_Associated_with_Mentors__c/Employee_Associated_with_Mentors__c.object-meta.xml
<CustomObject>
    <label>Employee Associated with Mentor</label>
    <nameField>
        <displayFormat>SMI-{000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Associated with Mentors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>