force-app/main/default/objects/Employee_Associated_with_Mentors__c/fields/Mentor_Name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Associated_with_Mentors1</relationshipName>
    <type>Lookup</type>
</CustomField>