force-app/main/default/objects/Employee_Associated_with_Mentors__c/fields/Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Start_Date__c</fullName>
    <label>Onboarding Start Date</label>
    <type>Date</type>
</CustomField>