force-app/main/default/objects/Employee_Associated_with_Mentors__c/fields/Send_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Welcome Email</label>
    <type>Checkbox</type>
</CustomField>