force-app/main/default/objects/Employee_Associated_with_Mentors__c/fields/SMI_Employee__c.field-meta.xml
<CustomField>
    <fullName>SMI_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMI Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Associated_with_Mentors</relationshipName>
    <type>Lookup</type>
</CustomField>