force-app/main/default/objects/Employee_Associated_with_Mentors__c/fields/SMI_Mentor__c.field-meta.xml
<CustomField>
    <fullName>SMI_Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMI Mentor</label>
    <referenceTo>SMI_Mentor__c</referenceTo>
    <relationshipLabel>Employee Associated with Mentors</relationshipLabel>
    <relationshipName>Employee_Associated_with_Mentors</relationshipName>
    <type>Lookup</type>
</CustomField>