force-app/main/default/objects/Employee_Associated_with_Mentors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SMI_Employee__c</columns>
    <columns>Mentor_Name__c</columns>
    <columns>SMI_Mentor__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>