force-app/main/default/objects/Employee_Associated_with_Mentors__c/listViews/Marketing_Employees.listView-meta.xml
<ListView>
    <fullName>Marketing_Employees</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SMI_Mentor__c</field>
        <operation>equals</operation>
        <value>Marketing Mentor</value>
    </filters>
    <label>Marketing Employees</label>
</ListView>