force-app/main/default/objects/Employee_Associated_with_Mentors__c/listViews/Sales_Employees.listView-meta.xml
<ListView>
    <fullName>Sales_Employees</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SMI_Mentor__c</field>
        <operation>equals</operation>
        <value>Sales Mentor</value>
    </filters>
    <label>Sales Employees</label>
</ListView>