force-app/main/default/objects/Employee_Associated_with_Mentors__c/listViews/Service_Employees.listView-meta.xml
<ListView>
    <fullName>Service_Employees</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SMI_Mentor__c</field>
        <operation>equals</operation>
        <value>Service Mentor</value>
    </filters>
    <label>Service Employees</label>
</ListView>